[gd_scene load_steps=34 format=2]

[ext_resource path="res://scenes/Miles.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/tiles/pathfinding/tilemap0.tmx" type="PackedScene" id=2]
[ext_resource path="res://scripts/level_manager.gd" type="Script" id=3]
[ext_resource path="res://scenes/PlayerController.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/tiles/graveyard/graveyard_tilemap.tmx" type="PackedScene" id=5]
[ext_resource path="res://sprites/prototype_phase/0036.exr" type="Texture" id=6]
[ext_resource path="res://sprites/fx/fire0/fire0036.exr" type="Texture" id=7]
[ext_resource path="res://sprites/fx/fire0/fire0037.exr" type="Texture" id=8]
[ext_resource path="res://sprites/fx/fire0/fire0038.exr" type="Texture" id=9]
[ext_resource path="res://sprites/fx/fire0/fire0039.exr" type="Texture" id=10]
[ext_resource path="res://sprites/fx/fire0/fire0040.exr" type="Texture" id=11]
[ext_resource path="res://sprites/fx/fire0/fire0041.exr" type="Texture" id=12]
[ext_resource path="res://sprites/fx/fire0/fire0042.exr" type="Texture" id=13]
[ext_resource path="res://sprites/fx/fire0/fire0043.exr" type="Texture" id=14]
[ext_resource path="res://sprites/fx/fire0/fire0044.exr" type="Texture" id=15]
[ext_resource path="res://sprites/fx/fire0/fire0045.exr" type="Texture" id=16]
[ext_resource path="res://sprites/fx/fire0/fire0046.exr" type="Texture" id=17]
[ext_resource path="res://sprites/fx/fire0/fire0047.exr" type="Texture" id=18]
[ext_resource path="res://sprites/fx/fire0/fire0048.exr" type="Texture" id=19]
[ext_resource path="res://sprites/fx/fire0/fire0049.exr" type="Texture" id=20]
[ext_resource path="res://sprites/fx/fire0/fire0050.exr" type="Texture" id=21]
[ext_resource path="res://sprites/fx/fire0/fire0051.exr" type="Texture" id=22]
[ext_resource path="res://sprites/fx/fire0/fire0052.exr" type="Texture" id=23]
[ext_resource path="res://sprites/fx/fire0/fire0053.exr" type="Texture" id=24]
[ext_resource path="res://sprites/fx/fire0/fire0054.exr" type="Texture" id=25]
[ext_resource path="res://sprites/fx/fire0/fire0055.exr" type="Texture" id=26]
[ext_resource path="res://sprites/fx/fire0/fire0056.exr" type="Texture" id=27]
[ext_resource path="res://scenes/Civilian.tscn" type="PackedScene" id=116]
[ext_resource path="res://sprites/ui/evil-hand (1).png" type="Texture" id=160]
[ext_resource path="res://sprites/prototype_phase/TEST.exr" type="Texture" id=161]
[ext_resource path="res://scenes/PlayerCamera.tscn" type="PackedScene" id=231]

[sub_resource type="CircleShape2D" id=1]
radius = 110.362

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Level0" type="Node2D"]
script = ExtResource( 3 )

[node name="ActorsAndTiles" type="YSort" parent="."]

[node name="Miles" parent="ActorsAndTiles" instance=ExtResource( 1 )]
position = Vector2( 927.478, 505.076 )

[node name="StaticBody2D" type="StaticBody2D" parent="ActorsAndTiles"]
position = Vector2( -734.603, 320.763 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorsAndTiles/StaticBody2D"]
position = Vector2( 742.968, 344.075 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ActorsAndTiles"]
visible = false
position = Vector2( 479.496, 421.619 )
texture = ExtResource( 160 )

[node name="Sprite2" type="Sprite" parent="ActorsAndTiles"]
position = Vector2( 709.599, 234.265 )
texture = ExtResource( 161 )

[node name="Civilian" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 416.39, 173.958 )
_is_aggressive = false
id = 1

[node name="Civilian2" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 416.39, 220.224 )
_is_aggressive = false

[node name="Civilian3" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 416.39, 266.49 )
_is_aggressive = false

[node name="Civilian4" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 416.39, 346.066 )

[node name="Civilian5" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 416.39, 495.967 )

[node name="Civilian6" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 218.373, 455.253 )

[node name="Civilian7" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 573.693, 386.78 )

[node name="Civilian8" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 172.108, 296.1 )
_is_aggressive = false

[node name="Civilian9" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 222.075, 214.672 )
_is_aggressive = false

[node name="Civilian10" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 346.066, 562.589 )
_is_aggressive = false
id = 1

[node name="Civilian11" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 210.971, 560.739 )
_is_aggressive = false
id = 1

[node name="Civilian12" parent="ActorsAndTiles" instance=ExtResource( 116 )]
position = Vector2( 99.9336, 557.037 )
_is_aggressive = false

[node name="GroundTiles" type="Node2D" parent="."]

[node name="Pathfinding" parent="GroundTiles" instance=ExtResource( 2 )]
visible = false
z_index = -1

[node name="graveyard_tilemap" parent="GroundTiles" instance=ExtResource( 5 )]
z_index = -1

[node name="Sprite" type="Sprite" parent="GroundTiles"]
position = Vector2( 1060.13, 513.363 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="GroundTiles"]
position = Vector2( 821.732, 509.407 )
frames = SubResource( 2 )
frame = 16
playing = true

[node name="PlayerController" parent="." instance=ExtResource( 4 )]

[node name="PlayerCamera" parent="." instance=ExtResource( 231 )]
